--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,11 +24,16 @@ a:hover {
 
 body {
   margin: 0;
+  padding:0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center; /* Para centrar el contenido horizontalmente */
+  background: linear-gradient(135deg, #3B4485, #7A3FA4, #CE41B8);
+  overflow-x: hidden; 
+  overflow: hidden;
+  height:100%;
 }
+
 
 h1 {
   font-size: 3.2em;
