--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ a:hover {
 body {
   margin: 0;
   padding:0;
-  background: linear-gradient(135deg, #3B4485, #7A3FA4, #CE41B8);
+  background: white;
   height:100%;
   
   
